--- a/ros_ws/src/.devcontainer/devcontainer.json
+++ b/ros_ws/src/.devcontainer/devcontainer.json
@@ -29,7 +29,9 @@
     },
     "runArgs": [
         "--net=host",
-        "-e", "DISPLAY=${env:DISPLAY}"
+        "-e", "DISPLAY=${env:DISPLAY}",
+        // "--runtime=nvidia",
+        // "--gpus", "all"
     ],
     "mounts": [
         "source=/tmp/.X11-unix,target=/tmp/.X11-unix,type=bind,consistency=cached",
